fixed CRUD, fixed auto-swagger update on error
