# app/models/user.rb
@@ -6,7 +6,7 @@ class User < ApplicationRecord
   validates :birthdate, presence: true
   validates :phone_number, presence: true
   validates :email_address, presence: true, uniqueness: true
-  validates :password, presence: true, length: { minimum: 8 }
+  validates :password_digest, presence: true, length: { minimum: 8 }
   validates :state, presence: true
   validates :city, presence: true
   validates :address, presence: true
